--- a/product_list.html
+++ b/product_list.html
@@ -65,7 +65,7 @@
                                 role="presentation"></div><a class="dropdown-item" role="presentation" href="product_chekout.html">Orders List</a><a class="dropdown-item" role="presentation" href="#">Wishlist</a><a class="dropdown-item" role="presentation" href="#">Bag</a>
                             <a
                                 class="dropdown-item" role="presentation" href="myprofile.html">My Address</a><a class="dropdown-item" role="presentation" href="myprofile.html">My Saved Cards</a>
-                                <div class="dropdown-divider" role="presentation"></div><a class="dropdown-item" role="presentation" href="myprofile.html">Edit Profile</a><a class="dropdown-item text-danger" role="presentation" href="#">Log Out</a></div>
+                                <div class="dropdown-divider" role="presentation"></div><a class="dropdown-item" role="presentation" href="myprofile.html">Edit Profile</a><a class="dropdown-item text-danger" role="presentation" href="before_login.html">Log Out</a></div>
                     </li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-left" href="product_chekout.html">&nbsp; &nbsp;&nbsp;<i class="far fa-bookmark"></i><br>WishList</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-left" href="product_chekout.html">&nbsp; &nbsp;<i class="icon-handbag"></i><br>&nbsp; Bag</a></li>
